import java.sql.Date;

public class Atendimento {
    long id;
    Date data;
    Date hora;
    Double valor;
    String status;
    String observacao;
}
