public class Convenio {
    long id;
    String nome;
    String razaoSocial;
    String cnpj;
    String representante;
    String email;
    String telefone;
    Boolean ativo;
    
}
