public class Especialidade {
    long id;
    String nome;
}
