import java.sql.Date;

public class Paciente {

    long id;
    String nome;
    String email;
    String telefone;
    Date dataNascimento;
    String grupoSanguineo;
    String sexo;
    String cep;
    String endereco;
    String cidade;
    String estado;

}