public class Unidade {
    long id;
    String nome;
    String endereco;
}
